# qesteidutil

./: .gitmodules  .travis.yml  AppxManifest.xml  AppxManifest.xml.cmake  CMakeLists.txt  COPING  README.md  RELEASE-NOTES.md  RELEASE-NOTES.txt  appveyor.yml  build.bat  qesteidutil.1.cmake  qesteidutil.appdata.xml  qesteidutil.desktop  qesteidutil.en-US.wxl  qesteidutil.entitlements  qesteidutil.et-EE.wxl  qesteidutil.pfx  qesteidutil.spec  qesteidutil.wxs
breakpad/: BreakPad.cmake  CMakeLists.txt  QBreakPad.cpp  QBreakPad.h  createsymbols.bat
breakpad/google-breakpad/src/processor/: disassembler_x86.cc  exploitability_win.cc  minidump_processor.cc
breakpad/translations/: breakpad.qrc  breakpad_en.ts  breakpad_et.ts  breakpad_ru.ts
common/: AboutDialog.cpp  AboutDialog.h  AboutWidget.cpp  AboutWidget.h  Application_mac.h  Application_mac.mm  CMakeLists.txt  CertificateWidget.cpp  CertificateWidget.h  CheckConnection.cpp  CheckConnection.h  ComboBox.cpp  ComboBox.h  Common.cpp  Common.h  DateTime.cpp  DateTime.h  Diagnostics.cpp  Diagnostics.h  Diagnostics_unix.cpp  Diagnostics_win.cpp  IKValidator.cpp  IKValidator.h  MacMenuBar.cpp  MacMenuBar.h  MessageBox.cpp  MessageBox.h  PinDialog.cpp  PinDialog.h  QCSP.cpp  QCSP.h  QPCSC.cpp  QPCSC.h  QPCSC_p.h  QPKCS11.cpp  QPKCS11.h  QPKCS11_p.h  SOAPDocument.cpp  SOAPDocument.h  Settings.h  (+8 more)
common/images/: allkirja_ikoonid.psd  common_images.qrc  tegevuste_ikoonid.psd
common/translations/: common_en.ts  common_et.ts  common_ru.ts  common_tr.qrc  common_tr5.qrc  qt_et.ts  qt_ru.ts  qtbase_et.ts
common/ui/: AboutDialog.ui  AboutWidget.ui  CertificateWidget.ui
debian/: changelog  control
fedora/: qesteidutil.spec  readme.md
mac/: Info.plist.cmake
mac/Resources/: Icon.icns
mac/Resources/en.lproj/: InfoPlist.strings
mac/Resources/et.lproj/: InfoPlist.strings
mac/Resources/ru.lproj/: InfoPlist.strings
qtsingleapplication/: CMakeLists.txt
qtsingleapplication/doc/html/: index.html  qtlockedfile-members.html  qtlockedfile.html  qtsingleapplication-example-loader.html  qtsingleapplication-example-trivial.html  qtsingleapplication-members.html  qtsingleapplication-obsolete.html  qtsingleapplication.html  qtsinglecoreapplication-example-console.html  qtsinglecoreapplication-members.html  qtsinglecoreapplication.html
qtsingleapplication/examples/console/: main.cpp
qtsingleapplication/examples/loader/: main.cpp
qtsingleapplication/examples/trivial/: main.cpp
qtsingleapplication/src/: qtlocalpeer.cpp
src/: CertStore.cpp  CertStore.h  CertUpdate.cpp  CertUpdate.h  DiagnosticsDialog.cpp  DiagnosticsDialog.h  DiagnosticsDialog_common.cpp  DiagnosticsDialog_unix.cpp  DiagnosticsDialog_win.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  QSmartCard.cpp  QSmartCard.h  QSmartCard_p.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Updater.cpp  Updater.h  Updater.ui  XmlReader.cpp  XmlReader.h  jscardmanager.cpp  jscardmanager.h  jscertdata.cpp  jscertdata.h  jsesteidcard.cpp  jsesteidcard.h  jsextender.cpp  jsextender.h  main.cpp  mainwindow.cpp  mainwindow.h  qesteidutil.1.cmake  qesteidutil.qrc  qesteidutil.rc  sslConnect.cpp  sslConnect.h  version.h
src/html/: index.html  lang.js  script.js  style.css
src/images/: id_kaart_header.psd
src/translations/: en.ts  et.ts  ru.ts  tr.qrc  tr.qrc.cmake
src/ui/: DiagnosticsDialog.ui  MainWindow.ui  SettingsDialog.ui
